Updated Project Image Overflow issue

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -13,6 +13,10 @@
   font-family: "Merriweather", serif;
   z-index: 2;
 
+  @include respond(tab-port) {
+    padding: 3% 5%; //1rem = 8px
+  }
+
   &__title {
     font-size: 3rem;
     font-weight: 700;
