--- a/src/components/Header/Hero.module.scss
+++ b/src/components/Header/Hero.module.scss
@@ -12,7 +12,6 @@
   &__text {
     color: #fff;
     text-align: center;
-    border-radius: 5px;
     cursor: default;
     opacity: 0;
 
