--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,9 +1,10 @@
 .navbar {
   position: absolute;
+  top: 0;
   width: 100%;
+  height: 5rem;
   background-color: #000; //rgb(120, 120, 120);
   transition: all 0.5s;
-  z-index: 1000;
 
   &__container {
     width: 100%;
@@ -12,12 +13,11 @@
     z-index: 1000;
     display: flex;
     justify-content: center;
-
     transition: all 0.75s;
 
     &Sticky {
       position: fixed;
-      top: -44.8px;
+      top: -5rem;
       transition: all 1s;
       transform: translateY(100%);
     }
@@ -28,7 +28,7 @@
   &__link:visited {
     position: relative;
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     text-transform: uppercase;
     padding: 1rem 0;
     margin: 0 2rem;
@@ -51,7 +51,7 @@
       color: rgb(241, 239, 64);
 
       &::after {
-        height: 3px;
+        height: 0.3rem;
       }
     }
   }
@@ -65,7 +65,7 @@
       bottom: 0%;
       left: 0%;
       width: 100%;
-      height: 3px;
+      height: 0.3rem;
       background-color: rgb(241, 239, 64) !important;
       transition: all 0.25s;
     }
