--- a/src/components/Portfolio/Project.module.scss
+++ b/src/components/Portfolio/Project.module.scss
@@ -4,12 +4,15 @@
   position: relative;
   opacity: 0;
   background-color: #000;
+  overflow: hidden;
+  width: 100%;
+  height: 18rem;
 
   &__image {
-    min-height: 100px;
     object-fit: fill;
     object-position: center top;
     width: 100%;
+    height: 18rem;
     transition: all 1s;
   }
 
