--- a/src/styles/config/_base.scss
+++ b/src/styles/config/_base.scss
@@ -22,9 +22,9 @@ html {
   @include respond(tab-port) {
     font-size: 50%; //1rem = 8px
   }
-  @include respond(phone) {
-    font-size: 30%; //1rem = 4.8px
-  }
+  // @include respond(phone) {
+  //   font-size: 30%; //1rem = 4.8px
+  // }
   @include respond(big-desktop) {
     font-size: 75%; //1rem = 12px
   }
